--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <title>Product Home Page</title>
   </head>
   <body>
+
+    <!-- NAVBAR -->
+
     <nav>
       <img src="./images/logo.svg" alt="logo" />
       <div class="nav-items">
@@ -23,7 +26,13 @@
         <h5 class="nav-item">About</h5>
       </div>
       <img class="side-img" src="./images/actions.svg" alt="actions" />
+      <img class="ham" src="./images/hamburger.png" alt="">
     </nav>
+
+
+    <!-- HERO SECTION -->
+
+
     <div class="intro-section">
       <div class="left-section">
         <h3>
@@ -43,25 +52,27 @@
           </h5>
         </div>
         <p class="text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
         <div class="action-btns">
           <button class="action-btn">Go Shopping</button>
           <button class="action-btn">See Catalog</button>
         </div>
       </div>
+
       <div class="right-section">
+
         <div class="headphone-div">
-          <img src="./images/discount.svg" alt="discount" class="discount" />
+          <div class="brochure">
+            <img src="./images/discount.svg" alt="discount" class="discount" />
+          </div>
           <div class="discount-content">
             <h4>Discount</h4>
             <h1>50%</h1>
           </div>
-          <img src="./images/headphones.jpg" alt="headphone" />
+          <img class="product" src="./images/headphones.jpg" alt="headphone" />
         </div>
+
         <div class="dots">
           <div class="dot yellow-dot"></div>
           <div class="dot tomato-dot"></div>
